# QQ

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  MessageType.h  Packege.cpp  Packege.h  icon.rc  main.cpp  resource.qrc
client/common/: CMakeLists.txt
client/common/database/: CMakeLists.txt  LocalDatabase.cpp  LocalDatabase.h
client/common/tcpClient/: CMakeLists.txt  Tcpclient.cpp  Tcpclient.h
client/loginInterface/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h
client/loginInterface/utils/: CMakeLists.txt  MoveWidget.cpp  MoveWidget.h
client/mainInterface/: CMakeLists.txt  MainPage.cpp  MainPage.h
client/mainInterface/component_Zone/: ButtonDelegate.cpp  ButtonDelegate.h  CMakeLists.txt  ChatListItemDelegate.cpp  ChatListItemDelegate.h  FriendListItemDelegate.cpp  FriendListItemDelegate.h
client/mainInterface/component_Zone/emoji_unicode_mapping_utils/: CMakeLists.txt  EmojiUnicodeMapper.cpp  EmojiUnicodeMapper.h
client/mainInterface/component_Zone/system_tray/: CMakeLists.txt  SysTray.cpp  SysTray.h
client/mainInterface/secondColumn/: AddFriendOrGroupDialog.cpp  AddFriendOrGroupDialog.h  CMakeLists.txt  ChatList.cpp  ChatList.h  FriendList.cpp  FriendList.h
client/mainInterface/specificWindow/: CMakeLists.txt  DefaultWindow.cpp  DefaultWindow.h  Frienddetailwidget.cpp  Frienddetailwidget.h  NotificationManager.cpp  NotificationManager.h
client/mainInterface/specificWindow/specificChatWindow/: AudioReceiver.cpp  AudioReceiver.h  AudioSender.cpp  AudioSender.h  BubbleWidget.cpp  BubbleWidget.h  CMakeLists.txt  EmojiManager.cpp  EmojiManager.h  SpecificChatWindow.cpp  SpecificChatWindow.h  VideoReceiver.cpp  VideoReceiver.h  VideoSender.cpp  VideoSender.h
client/mainInterface/toolBar/: CMakeLists.txt  ToolBar.cpp  ToolBar.h
client/resource/qss/: StyleSheet.css
server/: CMakeLists.txt  MessageType.h  Packege.cpp  Packege.h  main.cpp  resource.qrc
server/serverManager/: CMakeLists.txt  ServerManager.cpp  ServerManager.h
server/serverManager/database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
server/serverManager/server_tray/: CMakeLists.txt  ServerTray.cpp  ServerTray.h
server/serverManager/tcpServer/: CMakeLists.txt  TcpServer.cpp  Tcpserver.h
